# nanobot

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  LEGAL.md  Makefile  NOTICE  README.md  SECURITY.md  env.example
Docker/: Dockerfile  README.md  config.example.env  docker-compose.yml  entrypoint.sh  wizard
Docker/modules/: auth_bundle.sh  mcp_ready.sh  ssh_ready.sh  workspace.sh
apps/nanobot/: CMakeLists.txt  main.c
cmake/: NanobotArmv7.cmake  NanobotCompiler.cmake
docs/: AUDIT_20260720.md  AUTOPILOT_LHLAM.md  BACKENDS.md  BUILD.md  DEPENDENCIES.md  DOCKER.md  HUB.md  LABAUTH.md  LIMITS.md  MODULES.md  PEER_BUS.md  PLATFORM.md  README.md  SECURITY_AUDIT.md  SUBAGENTS.md  TESTING_FRAMEWORK.md
include/nanobot/: crypto.h  hub.h  json.h  os.h
libs/crypto/: CMakeLists.txt  ct.c  hex.c  random.c  secret.c
libs/json/: CMakeLists.txt  json.c
libs/os/: CMakeLists.txt  os.c
libs/provider/: CMakeLists.txt  provider.c  provider.h
libs/sched/: CMakeLists.txt  sched.c  sched.h
libs/subagent/: CMakeLists.txt  subagent.c  subagent.h
scripts/: auth_bundle  clean.sh  deploy.sh  deploy_binary_safe.sh  deploy_remote.sh  install.sh  install_maintain_cron.sh  install_remote.sh  install_robot.sh  peer_mcp_bridge.py  repo_maintain.sh  run.sh  run_remote_ui.sh  run_robot_ui.sh  set_setting.sh  settings.example
src/: agent.c  agent.h  auth.c  auth.h  http.c  http.h  hub.c  hub_local.h  improve.c  improve.h  main.c  mcp.c  mcp.h  mcp_remote.c  mcp_remote.h  memory.c  memory.h  shell.c  shell.h  shell_gate.c  shell_gate.h  task.c  task.h  util.c  util.h  www_index.h
tests/crypto/: CMakeLists.txt  test_crypto.c  test_secret.c
www/: README.md  index.html
